--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/VirtoCommerce.OrderModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/VirtoCommerce.OrderModule.Web.csproj
@@ -126,12 +126,12 @@
     <Content Include="module.manifest" />
     <Content Include="Scripts\blades\!customerOrder-list.js" />
     <Content Include="Scripts\blades\customerOrder-list.tpl.html" />
-    <Content Include="Scripts\blades\customerOrder-detail.js" />
+    <Content Include="Scripts\blades\operation-detail.js" />
     <Content Include="Scripts\blades\customerOrder-detail.tpl.html" />
     <Content Include="Scripts\blades\customerOrder-items.js" />
     <Content Include="Scripts\blades\customerOrder-items.tpl.html" />
-    <Content Include="Scripts\blades\customerOrder-detail-toolbar.tpl.html" />
-    <Content Include="Scripts\blades\shipment-detail.js" />
+    <Content Include="Scripts\blades\operation-detail-toolbar.tpl.html" />
+    <Content Include="Scripts\blades\payment-detail.tpl.html" />
     <Content Include="Scripts\blades\shipment-detail.tpl.html" />
     <Content Include="Scripts\home.tpl.html" />
     <Content Include="Scripts\order.js" />
@@ -164,10 +164,15 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Scripts\resources\customerOrders.js" />
+    <Content Include="Scripts\resources\!customerOrders.js" />
+    <Content Include="Scripts\resources\paymentGateways.js" />
+    <Content Include="Scripts\resources\stores.js" />
+    <Content Include="Scripts\resources\fulfillmentCenters.js" />
     <Content Include="Scripts\services\!calculateTotals.js" />
     <Content Include="Scripts\widgets\customerOrder-items-widget.tpl.html" />
     <Content Include="Scripts\widgets\!customerOrder-items-widget.js" />
+    <Content Include="Scripts\widgets\shipment-totals-widget.js" />
+    <Content Include="Scripts\widgets\shipment-totals-widget.tpl.html" />
     <Content Include="Scripts\widgets\operation-comment-widget.js" />
     <Content Include="Scripts\widgets\customerOrder-totals-widget.js" />
     <Content Include="Scripts\widgets\operation-comment-widget.tpl.html" />
