--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Data/VirtoCommerce.Content.Data.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Data/VirtoCommerce.Content.Data.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
