--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/packages.config
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/packages.config
@@ -37,6 +37,7 @@
   <package id="Moment.js" version="2.8.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="selectize" version="0.9.0" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net451" />
   <package id="underscore.js" version="1.7.0" targetFramework="net451" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net451" />
