--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Menu.Data/VirtoCommerce.Content.Menu.Data.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Menu.Data/VirtoCommerce.Content.Menu.Data.csproj
@@ -48,16 +48,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201502261622360_Initial.cs" />
+    <Compile Include="Migrations\201502261622360_Initial.Designer.cs">
+      <DependentUpon>201502261622360_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\MenuLink.cs" />
     <Compile Include="Models\MenuLinkList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\DatabaseMenuRepositoryImpl.cs" />
     <Compile Include="Repositories\IMenuRepository.cs" />
+    <Compile Include="Services\IMenuService.cs" />
+    <Compile Include="Services\MenuServiceImpl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201502261622360_Initial.resx">
+      <DependentUpon>201502261622360_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\Core\CommerceFoundation.Data\CommerceFoundation.Data.csproj">
       <Project>{bb168a74-0f1e-43be-a616-134902238b80}</Project>
