--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Tests/VirtoCommerce.Content.Tests.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Tests/VirtoCommerce.Content.Tests.csproj
@@ -85,7 +85,8 @@
     <Compile Include="DatabaseRepositoryTest.cs" />
     <Compile Include="FileSystemRepositoryTest.cs" />
     <Compile Include="GitHubRepositoryTest.cs" />
-    <Compile Include="MenuTests\RepositoryTests.cs" />
+    <Compile Include="MenuTests\MenuRepositoryTests.cs" />
+    <Compile Include="MenuTests\MenuServiceTests.cs" />
     <Compile Include="PagesTests\DatabasePagesRepositoryTests.cs" />
     <Compile Include="PagesTests\FileSystemPagesRepositoryTests.cs" />
     <Compile Include="PagesTests\GitHubPagesRepositoryTests.cs" />
