updates to browseclient, pricing

--- a/src/Presentation/WebAdmin/VirtoCommerce.Framework.Web/VirtoCommerce.Framework.Web.csproj
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Framework.Web/VirtoCommerce.Framework.Web.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Asset\BlobStorageMultipartStreamProvider.cs" />
     <Compile Include="Asset\CustomMultipartStreamProvider.cs" />
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Common\ArrayInputAttribute.cs" />
     <Compile Include="Common\FormatingExtensions.cs" />
     <Compile Include="Common\KeyValuePairExtensions.cs" />
     <Compile Include="Common\ListDictionary.cs" />
