added tests for priceclient

--- a/Tests/ApiClientTests/ApiClientTests.csproj
+++ b/Tests/ApiClientTests/ApiClientTests.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CartScenarios.cs" />
+    <Compile Include="PriceScenarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
