--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.PagesModule.Web/VirtoCommerce.PagesModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.PagesModule.Web/VirtoCommerce.PagesModule.Web.csproj
@@ -100,7 +100,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\css\bootstrap-markdown.min.css" />
+    <Content Include="Content\css\pages.css" />
     <Content Include="Scripts\blades\edit-page.js" />
     <Content Include="Scripts\blades\edit-page.tpl.html" />
     <Content Include="Scripts\blades\pages-list.js" />
