--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/VirtoCommerce.CustomerModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/VirtoCommerce.CustomerModule.Web.csproj
@@ -105,18 +105,28 @@
   <ItemGroup>
     <Content Include="Scripts\blades\!customer-list.js" />
     <Content Include="Scripts\blades\!customer-list.tpl.html" />
+    <Content Include="Scripts\blades\customer-property-list.js" />
+    <Content Include="Scripts\blades\customer-property-list.tpl.html" />
     <Content Include="Scripts\blades\customer-detail.js" />
     <Content Include="Scripts\blades\customer-detail.tpl.html" />
+    <Content Include="Scripts\blades\customer-phones-list.js" />
     <Content Include="Scripts\blades\customer-emails-list.js" />
+    <Content Include="Scripts\blades\customer-phones-list.tpl.html" />
     <Content Include="Scripts\blades\customer-emails-list.tpl.html" />
     <Content Include="Scripts\blades\customer-address-detail.js" />
     <Content Include="Scripts\blades\customer-address-detail.tpl.html" />
     <Content Include="Scripts\blades\customer-address-list.js" />
     <Content Include="Scripts\blades\customer-address-list.tpl.html" />
+    <Content Include="Scripts\blades\customer-property-detail.js" />
+    <Content Include="Scripts\blades\customer-property-detail.tpl.html" />
+    <Content Include="Scripts\blades\customer-property-valueType.js" />
+    <Content Include="Scripts\blades\customer-property-valueType.tpl.html" />
     <Content Include="Scripts\resources\customers.js" />
     <Content Include="Scripts\customer.js" />
+    <Content Include="Scripts\widgets\customerPhonesWidget.js" />
     <Content Include="Scripts\widgets\customerEmailsWidget.js" />
     <Content Include="Scripts\widgets\!customerAddressesWidget.js" />
+    <Content Include="Scripts\widgets\customerPhonesWidget.tpl.html" />
     <Content Include="Scripts\widgets\customerEmailsWidget.tpl.html" />
     <Content Include="Scripts\widgets\!customerAddressesWidget.tpl.html" />
     <Content Include="Scripts\widgets\customerPropertyWidget.js" />
