--- a/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/VirtoCommerce.StoreModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/VirtoCommerce.StoreModule.Web.csproj
@@ -103,6 +103,10 @@
   <ItemGroup>
     <Content Include="Scripts\blades\!stores-list.js" />
     <Content Include="Scripts\blades\!stores-list.tpl.html" />
+    <Content Include="Scripts\blades\store-currencies-list.js" />
+    <Content Include="Scripts\blades\store-languages-list.js" />
+    <Content Include="Scripts\blades\store-currencies-list.tpl.html" />
+    <Content Include="Scripts\blades\store-languages-list.tpl.html" />
     <Content Include="Scripts\blades\store-setting-detail.js" />
     <Content Include="Scripts\blades\store-setting-detail.tpl.html" />
     <Content Include="Scripts\blades\store-payments-list.js" />
@@ -112,6 +116,8 @@
     <Content Include="Scripts\blades\store-advanced.js" />
     <Content Include="Scripts\blades\store-detail.js" />
     <Content Include="Scripts\blades\store-advanced.tpl.html" />
+    <Content Include="Scripts\widgets\storeCurrenciesWidget.js" />
+    <Content Include="Scripts\widgets\storeCurrenciesWidget.tpl.html" />
     <Content Include="Scripts\widgets\storePaymentsWidget.js" />
     <Content Include="Scripts\widgets\storeSettingsWidget.js" />
     <Content Include="Scripts\widgets\storeAdvancedWidget.js" />
