-ADD Money directive

--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
@@ -348,6 +348,7 @@
     <Content Include="Scripts\angular-messages.js" />
     <Content Include="Scripts\angular-messages.min.js" />
     <Content Include="Scripts\angular-mocks.js" />
+    <Content Include="Scripts\common\directives\angular-money-directive.js" />
     <Content Include="Scripts\angular-multi-select.js" />
     <Content Include="Scripts\angular-resource.js" />
     <Content Include="Scripts\angular-resource.min.js" />
