Fixed ArrayInputAttribute. Refactoring.

--- a/src/Presentation/WebAdmin/VirtoCommerce.Framework.Web/VirtoCommerce.Framework.Web.csproj
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Framework.Web/VirtoCommerce.Framework.Web.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Asset\CustomMultipartStreamProvider.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Common\ArrayInputAttribute.cs" />
+    <Compile Include="Common\AttributeExtensions.cs" />
     <Compile Include="Common\FormatingExtensions.cs" />
     <Compile Include="Common\KeyValuePairExtensions.cs" />
     <Compile Include="Common\ListDictionary.cs" />
