-ADD cancel operation and minor fixes

--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/VirtoCommerce.OrderModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/VirtoCommerce.OrderModule.Web.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="Scripts\blades\!blades.js" />
+    <Content Include="Scripts\dialogs\cancelOperation-dialog.tpl.html" />
     <Content Include="Scripts\resources\!resources.js" />
     <Content Include="Scripts\widgets\!widgets.js" />
     <Content Include="Scripts\widgets\address-widget.js" />
