--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/VirtoCommerce.CatalogModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/VirtoCommerce.CatalogModule.Web.csproj
@@ -321,6 +321,10 @@
       <Project>{e3769352-34c8-41a9-a6c8-da95d7dff903}</Project>
       <Name>CommerceFoundation.Data.Azure</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\Extensions\Cache\VirtoCommerce.Caching.HttpCache\VirtoCommerce.Caching.HttpCache.csproj">
+      <Project>{3FE4EB14-557A-46BC-94AD-2E9874F85ACE}</Project>
+      <Name>VirtoCommerce.Caching.HttpCache</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\..\Extensions\Search\ElasticSearchProvider\ElasticSearchProvider.csproj">
       <Project>{039e7914-2925-44c4-acad-6bccfa2a370e}</Project>
       <Name>ElasticSearchProvider</Name>
