--- a/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.CoreModule.Tests/VirtoCommerce.CoreModule.Tests.csproj
+++ b/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.CoreModule.Tests/VirtoCommerce.CoreModule.Tests.csproj
@@ -72,6 +72,10 @@
       <Project>{E7FC9A51-1B39-4BDC-983A-8A059C5FC58B}</Project>
       <Name>CommerceFoundation</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\Extensions\Cache\VirtoCommerce.Caching.HttpCache\VirtoCommerce.Caching.HttpCache.csproj">
+      <Project>{3FE4EB14-557A-46BC-94AD-2E9874F85ACE}</Project>
+      <Name>VirtoCommerce.Caching.HttpCache</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\VirtoCommerce.Framework.Web\VirtoCommerce.Framework.Web.csproj">
       <Project>{f7c9313b-522e-4619-abc9-8c7d4600d6b5}</Project>
       <Name>VirtoCommerce.Framework.Web</Name>
