--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Data/VirtoCommerce.CatalogModule.Data.csproj
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Data/VirtoCommerce.CatalogModule.Data.csproj
@@ -68,7 +68,6 @@
     <Compile Include="Converters\PropertyValueConverter.cs" />
     <Compile Include="Converters\PropertyValueTypeConverter.cs" />
     <Compile Include="Converters\SeoInfoConverter.cs" />
-    <Compile Include="Extensions\RepositoryCachingExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\FoundationAppConfigRepositoryImpl.cs" />
     <Compile Include="Repositories\FoundationCatalogRepositoryImpl.cs" />
@@ -103,6 +102,9 @@
       <Project>{67c58a78-ddea-4fa3-a969-1cab582918e4}</Project>
       <Name>VirtoCommerce.Domain</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
