--- a/src/Extensions/Client/Commerce.ApiClient/packages.config
+++ b/src/Extensions/Client/Commerce.ApiClient/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Marvin.HttpCache" version="0.5.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.7" targetFramework="net45" />
 </packages>
