--- a/src/Extensions/Client/Commerce.ApiClient/VirtoCommerce.ApiClient.csproj
+++ b/src/Extensions/Client/Commerce.ApiClient/VirtoCommerce.ApiClient.csproj
@@ -32,16 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Marvin.HttpCache">
-      <HintPath>..\..\..\..\packages\Marvin.HttpCache.0.5.0\lib\portable-net45+win+wpa81\Marvin.HttpCache.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Newtonsoft.Json.6.0.7\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Collections.Immutable">
-      <HintPath>..\..\..\..\packages\Microsoft.Bcl.Immutable.1.0.34\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
-    </Reference>
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
@@ -61,11 +55,14 @@
   <ItemGroup>
     <Compile Include="BaseClient.cs" />
     <Compile Include="BrowseClient.cs" />
-    <Compile Include="Caching\CacheEntries.cs" />
+    <Compile Include="Caching\CacheContent.cs" />
     <Compile Include="Caching\CacheEntry.cs" />
-    <Compile Include="Caching\CacheHelper.cs" />
-    <Compile Include="Caching\HttpCacheRepository.cs" />
-    <Compile Include="Caching\ICacheRepository.cs" />
+    <Compile Include="Caching\CacheQueryResult.cs" />
+    <Compile Include="Caching\HttpCache.cs" />
+    <Compile Include="Caching\IContentStore.cs" />
+    <Compile Include="Caching\InMemoryContentStore.cs" />
+    <Compile Include="Caching\PrimaryCacheKey.cs" />
+    <Compile Include="Caching\PrivateCacheHandler.cs" />
     <Compile Include="ClientContext.cs" />
     <Compile Include="CommerceClients.cs" />
     <Compile Include="CommerceConfiguration.cs" />
@@ -175,8 +172,10 @@
     <Compile Include="Utilities\HmacUtility.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
