settings refactored to be accessible from module details. Test #1636

--- a/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
@@ -153,6 +153,8 @@
     <Content Include="Scripts\Settings\resources\setting.js" />
     <Content Include="Scripts\Settings\settings.js" />
     <Content Include="Scripts\common\ok-cancel.tpl.html" />
+    <Content Include="Scripts\Settings\widgets\settingsWidget.js" />
+    <Content Include="Scripts\Settings\widgets\settingsWidget.tpl.html" />
     <None Include="app.config" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
