--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Menu.Data/VirtoCommerce.Content.Menu.Data.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Menu.Data/VirtoCommerce.Content.Menu.Data.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\201503091625145_UpdateModel.Designer.cs">
       <DependentUpon>201503091625145_UpdateModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503092100208_AddListPropertyLanguageRemoveLinkProperties.cs" />
+    <Compile Include="Migrations\201503092100208_AddListPropertyLanguageRemoveLinkProperties.Designer.cs">
+      <DependentUpon>201503092100208_AddListPropertyLanguageRemoveLinkProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\MenuLink.cs" />
     <Compile Include="Models\MenuLinkList.cs" />
@@ -82,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201503091625145_UpdateModel.resx">
       <DependentUpon>201503091625145_UpdateModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503092100208_AddListPropertyLanguageRemoveLinkProperties.resx">
+      <DependentUpon>201503092100208_AddListPropertyLanguageRemoveLinkProperties.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
