--- a/src/Extensions/Client/Commerce.ApiClient/VirtoCommerce.ApiClient.csproj
+++ b/src/Extensions/Client/Commerce.ApiClient/VirtoCommerce.ApiClient.csproj
@@ -74,8 +74,8 @@
     <Compile Include="Constants.cs" />
     <Compile Include="DataContracts\CustomerService\Address.cs" />
     <Compile Include="DataContracts\CustomerService\CustomerSearchResult.cs" />
-    <Compile Include="DataContracts\Lists\MenuLink.cs" />
-    <Compile Include="DataContracts\Lists\MenuLinkList.cs" />
+    <Compile Include="DataContracts\Lists\Link.cs" />
+    <Compile Include="DataContracts\Lists\LinkList.cs" />
     <Compile Include="DataContracts\Price.cs" />
     <Compile Include="Extensions\ListClientExtensions.cs" />
     <Compile Include="PriceClient.cs" />
